src/objects/Permit__c.object
<CustomObject>
    <description>Permits (Transportation, Building, Event, etc.) issued by the City of West Sacramento</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Permits</relationshipLabel>
        <relationshipName>Permits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_End_Date__c</fullName>
        <description>Approved effective end date for permit</description>
        <label>Approved End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Start_Date__c</fullName>
        <description>Approved start date for permit</description>
        <label>Approved Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comb_Vehicle_Length__c</fullName>
        <description>Actual length of the vehicle / combo from most forward portion to most rear portion.</description>
        <label>Comb Vehicle Length</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Permits</relationshipLabel>
        <relationshipName>Permits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Haul_Drive_Tow__c</fullName>
        <description>Haul, drive or tow.</description>
        <inlineHelpText>Examples: if item is an excavator - Haul. Crane = Drive. Conveyer with axels = Tow.</inlineHelpText>
        <label>Haul-Drive-Tow</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Haul</fullName>
                </value>
                <value>
                    <fullName>Drive</fullName>
                </value>
                <value>
                    <fullName>Tow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hauling_Equip_Desc__c</fullName>
        <description>Description of Hauling Equipment</description>
        <inlineHelpText>Type of vehicle that will be hauling the equipment.  Serial Numbers should be included.</inlineHelpText>
        <label>Hauling Equip Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Kingpin_to_Last_Axle__c</fullName>
        <description>All applications must have an entry in this section.</description>
        <inlineHelpText>Single Vehicle, Truck-Trailer: N/A
Tractor-Semi: Measure from center of kingpin to center of rear-most axles</inlineHelpText>
        <label>Kingpin to Last Axle</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Equip_Description__c</fullName>
        <description>Description of Load or Equipment and Model No.</description>
        <inlineHelpText>Complete description of load or equipment to be moved. Use specific model number and/or serial numbers to complete the identification. The more complete the description the more likely it is that the application will be processed in a timely manner.</inlineHelpText>
        <label>Load-Equip Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loaded_Height__c</fullName>
        <label>Loaded Height</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loaded_Overall_Length__c</fullName>
        <label>Loaded Overall Length</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loaded_Width__c</fullName>
        <label>Loaded Width</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permit_Application_Date__c</fullName>
        <label>Permit Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permit_Fee__c</fullName>
        <description>Cost of obtaining permit</description>
        <formula>IF( ISPICKVAL(Permit_Type__c,&quot;Annual Transportation Permit&quot;), 90, 16)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Permit Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Permit_Type__c</fullName>
        <label>Permit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Transportation Permit</fullName>
                    <default>true</default>
                    <label>Single Transportation Permit</label>
                </value>
                <value>
                    <fullName>Annual Transportation Permit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_End_Date__c</fullName>
        <description>Requested effective end date of permit</description>
        <inlineHelpText>Indicate requested end date for this permit</inlineHelpText>
        <label>Requested End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Start_Date__c</fullName>
        <description>Requested effective start date of Permit</description>
        <inlineHelpText>Indicate requested effective start date of permit</inlineHelpText>
        <label>Requested Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Process</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Issued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Message__c</fullName>
        <label>Transaction Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_Unlimited_Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Unlimited Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_Unlimited_Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Unlimited Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_Unlimited_Sunset_Sunrise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Unlimited Sunset-Sunrise</label>
        <type>Checkbox</type>
    </fields>
    <label>Permit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Permit_Fee__c</columns>
        <columns>Permit_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Transaction_ID__c</columns>
        <columns>Transaction_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PMT-{000000}</displayFormat>
        <label>Permit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>